--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5.14"
+log = "0.4.17"
+tokio = { version = "1.20.1", features = ["full"] }
+tracing-subscriber = "0.3.15"
