--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5.13"
+clap = { version = "4.0.18", features = ["derive", "env"] }
 log = "0.4.17"
 tokio = { version = "1.20.1", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["fs", "trace"] }
