--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.0"
+askama = "0.11.1"
+axum = "0.6.1"
 clap = { version = "4.0.29", features = ["derive", "env"] }
 log = "0.4.17"
-tokio = { version = "1.22.0", features = ["full"] }
-tower-http = { version = "0.3.4", features = ["fs", "trace"] }
+tokio = { version = "1.23.0", features = ["full"] }
+tower = "0.4.13"
+tower-http = { version = "0.3.5", features = ["fs", "trace"] }
 tracing-subscriber = "0.3.16"
