feat(server): impl login

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 
 [dependencies]
 askama = "0.11.1"
-axum = "0.6.1"
+axum = { version = "0.6.1", features = ["form"] }
+axum-login = "0.4.1"
 clap = { version = "4.0.29", features = ["derive", "env"] }
 log = "0.4.17"
+rand = { version = "0.8.5", features = ["min_const_gen"] }
+serde = { version = "1.0.150", features = ["derive"] }
 tokio = { version = "1.23.0", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.3.5", features = ["fs", "trace"] }
